# rivest_cipher

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: cast.rs  lib.rs
src/schemes/: rc5.rs
