[package]
name = "rivest_cipher"
version = "0.1.0"
edition = "2021"
description = "Simple module with Rivest Cipher implemntation"
license = "MIT"
repository = "https://github.com/bobaxix/rivest_cipher"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2.15"
